<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Koeko</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Parameters</string>
    <string name="str_next">Next</string>
    <string name="title_activity_result">Results</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_scores">Best scores</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_client">Network</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_bluetoothclient">Start</string>
    <string name="title_activity_interactivemode">Classroom activity</string>
    <string name="menu_score">score:</string>
    <string name="menu_level">level:</string>
    <string name="settings_name">Name</string>
    <string name="settings_master">Connect to</string>
    <string name="button_settings_back">Save and go back</string>
    <string name="button_menu_settings">Settings</string>
    <string name="button_result_back">Go back to menu</string>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="grey">#303030</color>
    <color name="blue">#00cccb</color>
    <color name="blue_faded">#b3ffff</color>
    <color name="yellow">#E8D630</color>
    <color name="red">#F7230C</color>
    <color name="koekored">#ff3333</color>
    <color name="green">#57D53B</color>
    <color name="gamegreen">#add82a</color>
    <string name="title_activity_evaluation_results">Results</string>
    <string name="waiting_for_question">Waiting for the next question</string>
    <string name="hello">Hello</string>
    <string name="interactive_mode_button">Classroom Activity</string>
    <string name="answer_button">Submit the answer</string>
    <string name="keepcalmimage" translatable="false">keepCalmImage</string>
    <string name="keep_calm_and_wait">AND WAIT FOR NEXT QUESTION</string>
    <string name="keep_calm_and_restart">AND RESTART THE CLASSROOM ACTIVITY (but before, check that you have the right ip address in "settings")</string>
    <string name="keep_calm_problem">THERE WAS A PROBLEM. RESTART THE CLASSROOM ACTIVITY</string>
    <string name="menu_subject">Subject</string>
    <string name="all_subjects">All subjects</string>
    <string name="exercices">Practice</string>
    <string name="homeworks">Homeworks</string>
    <string name="start_homeworks">Start Homework</string>
    <string name="free_practice">Practice</string>
    <string name="start_free_practice">Start</string>
    <string name="title_exercice_activity">Practice</string>
    <string name="chose_teacher">Teacher:</string>
    <string name="chose_subject">Subject:</string>
    <string name="questionsetactivity">Practice</string>
    <string name="correction_incorrect">Incorrect. The right answer was:</string>
    <string name="correction_correct">Correct!</string>
    <string name="correction_mltchoice_incorrect">Incorrect :-(</string>
    <string name="noQuestionToPractice">You are quite good! You don\'t have any more questions needing practice.</string>
    <string name="instructions_menu">. Welcome to Learning Tracker. Check that you have the right IP address in "Settings" before starting a classroom activity.</string>
    <string name="ok_button">OK</string>
    <string name="answer_example">The answer is for example:</string>
    <string name="title_activity_corrected_question">Correction</string>
    <string name="results_list">List</string>
    <string name="results_graph">Graph</string>
    <string name="results_city">Your City</string>
    <string name="connecting">Connecting...</string>
    <string name="automatic_connection_failed">Automatic connection failed. If it keeps failing, set the teacher\'s IP address manually in \"Settings\"</string>
    <string name="automatic_connection">Automatic Connection</string>
    <string name="no_name">No Name</string>
    <string name="back_to_question">Back to Question</string>
    <string name="back_to_test">Back to Test</string>
    <string name="please_change_name">Please change the user name in \"Settings\" before starting a classroom activity</string>
    <string name="formative">Formative</string>
    <string name="certificative">Certificative</string>
    <string name="candobetter">Can do better</string>
    <string name="ok">OK</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="disconnected">Disconnected</string>
    <string name="start_connection">Start Connection</string>
    <string name="stop_connection">Stop Connection</string>
    <string name="hotspot_available">Hotspot Available</string>
    <string name="me">Me</string>
    <string name="internet_server">Internet Server</string>
    <string name="more_settings">More Settings</string>
    <string name="less_settings">Less Settings</string>
    <string name="homework_key">Code</string>
    <string name="homework">Homework</string>
    <string name="add_code">Add Code</string>
    <string name="edit_code">Edit Code</string>
    <string name="delete_code">Delete Code</string>
    <string name="friendly_name">Friendly Name</string>
    <string name="download_new_homework_version">Download Homework</string>
    <string name="back_to_game">Back to Game</string>
    <string name="your_answer">Your Answer</string>
    <string name="hotspot_configuration">Hotspot Configuration</string>
    <string name="start_central">Advertise</string>
    <string name="start_peripheral" translatable="false">Discover</string>
    <string name="bridge_hotspot">Bridge hotspot</string>
    <string name="discover">Discover</string>
    <string name="advertise">Advertise</string>
    <string name="starting">Starting...</string>
    <string name="nb_bridges">Number of bridges:</string>
</resources>
