<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
	android:layout_height="match_parent" android:background="@color/white"
	tools:context=".Activities.ExerciseActivity">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_centerHorizontal="true"
		android:layout_alignParentTop="true"
		android:weightSum="30">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/free_practice"
			android:id="@+id/fp_textView"
			android:layout_weight="0.5"
			android:textAlignment="center"
			android:textColor="@color/black" />

		<Spinner
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/subjects_spinner"
			android:layout_weight="0.5"
			android:spinnerMode="dropdown"
			android:textColor="@color/black"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/start_free_practice"
			android:id="@+id/freepractice_button"
			android:layout_gravity="center_horizontal"
			android:layout_weight="0.5"
			android:background="@color/blue"
			android:textColor="@color/white"
			android:layout_marginTop="10dp"
			android:paddingStart="40dp"
			android:paddingEnd="40dp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/homework"
			android:id="@+id/hw_textView"
			android:layout_weight="0.5"
			android:textColor="@color/black" />

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_alignParentTop="true"
			android:layout_weight="0.25"
			android:weightSum="3">

			<Button
				android:id="@+id/add_code_button"
				android:clickable="true"
				android:onClick="addCode"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/add_code"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_weight="1"
				android:background="@color/blue"
				android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
				android:paddingStart="3dp"
				android:paddingEnd="3dp" />
			<Button
				android:id="@+id/edit_code_button"
				android:clickable="true"
				android:onClick="editCode"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/edit_code"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_weight="1"
				android:background="@color/blue"
				android:textColor="@color/white"
				android:paddingStart="3dp"
				android:paddingEnd="3dp" />
			<Button
				android:id="@+id/delete_code_button"
				android:clickable="true"
				android:onClick="deleteCode"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/delete_code"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_weight="1"
				android:background="@color/blue"
				android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
				android:paddingStart="3dp"
				android:paddingEnd="3dp" />
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_alignParentTop="true"
			android:weightSum="1">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/homework_key"
				android:layout_weight="0.5"
				android:textColor="@color/black" />

			<Spinner
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/homework_keys"
				android:layout_gravity="center_horizontal"
				android:layout_weight="0.5"
				android:spinnerMode="dropdown"
				android:textColor="@color/black" />
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_alignParentTop="true"
			android:weightSum="1">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/homework"
				android:layout_weight="0.5"
				android:textColor="@color/black" />

			<Spinner
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/homeworks_spinner"
				android:layout_gravity="center_horizontal"
				android:layout_weight="0.5"
				android:spinnerMode="dropdown"
				android:textColor="@color/black" />
		</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentTop="true"
		android:layout_marginTop="15dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:layout_weight="0.5"
		android:weightSum="2">
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="3dp"
			android:text="@string/download_new_homework_version"
			android:id="@+id/download_homework_button"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
			android:background="@color/blue"
			android:textColor="@color/white"
			android:paddingEnd="10dp"
			android:paddingStart="10dp" />
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="3dp"
			android:text="@string/start_homeworks"
			android:id="@+id/homework_button"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
			android:background="@color/blue"
			android:textColor="@color/white"
			android:paddingEnd="10dp"
			android:paddingStart="10dp" />
	</LinearLayout>
	</LinearLayout>
</RelativeLayout>