<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context=".Activities.MenuActivity">

    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_marginBottom="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="12">

        <LinearLayout
            android:id="@+id/linearLayoutSettingsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/textViewNom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/settings_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edittextnom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textViewNom"
                android:layout_weight="7"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <Switch
            android:id="@+id/automaticConnectionSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutSettingsName"
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:text="@string/automatic_connection"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/linearLayoutSettingsIPAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/automaticConnectionSwitch"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:weightSum="10">

            <TextView
                android:id="@+id/textViewMaster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/automaticConnectionSwitch"
                android:text="@string/settings_master"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:layout_weight="5"/>

            <EditText
                android:id="@+id/edittextmaster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textViewMaster"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:layout_weight="5">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <Switch
            android:id="@+id/hotspotAvailableSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutSettingsName"
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:text="@string/hotspot_available"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonsaveandback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutSettingsIPAddress"
            android:backgroundTint="@color/blue"
            android:text="@string/button_settings_back"
            android:textColor="@color/white"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>